- fixed control center crash with private method `gsub' called for #<Hash:0x7f4f6f3a7940> - currently disable tipsy tooltip for recently used, needs adaptation - webyast-base-ui-0.2.31

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -149,10 +149,10 @@
           <ul id="webyast_plugins" class="image-grid" style="clear:both;">
 	          <% @shortcuts.values.reject{|v| v['disabled']}.sort_by {|v| v['title']}.each_with_index do |data, index| %>
 	            <% if data['main'] %>
-              <li id="<%= data["url"].gsub(/\//, '') %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="main">
+              <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="main">
               <% else %>
 	          
-              <li id="<%= data["url"].gsub(/\//, '') %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="<%= data['groups'] %>">
+              <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="<%= data['groups'] %>">
               <% end %>
                 <a href="<%= data['url'] %>" class="plugin_link" original-title="<%= _(data['description']) %>">
                   <%= image_tag(data['icon'] ) %>
