--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -364,6 +364,8 @@ ul li
 #warning_message_text
   font-size: 16px
   color: #444
+  text-align: center
+  padding: 10px 20px 10px 20px
   vertical-align: middle
 
 /* == Lists and Tables ====================================================
