--- a/webclient/public/stylesheets/tipsy.css
+++ b/webclient/public/stylesheets/tipsy.css
@@ -32,6 +32,9 @@ THE SOFTWARE.*/
 .tipsy-se .tipsy-arrow { bottom: 0; right: 10px; background-position: bottom left; }
 .tipsy-e .tipsy-arrow { top: 50%; margin-top: -4px; right: 0; width: 5px; height: 9px; background-position: top right; }
 .tipsy-w .tipsy-arrow { top: 50%; margin-top: -4px; left: 0; width: 5px; height: 9px; }
-/* Customized for control panel */
-.tipsy-n .tipsy-arrow { top: 2px; left: 50%; margin-left: -4px; }
-.tipsy-n .tipsy-arrow { display:none; }
+
+
+/* WORKAROUND: Customized for control panel */
+.tipsy { margin-top:16px; }
+.tipsy-n .tipsy-arrow { top: 0; left: 50%; margin-top:0px; margin-left: -4px; }
+/*.tipsy-n .tipsy-arrow { display:none; }*/
