--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -43,8 +43,9 @@
   -moz-border-radius:10px;
   /*ROUND*/
   -moz-border-radius:100%;
+  -webkit-border-radius:100px;
   border-radius: 100%;
-  /*-webkit-border-radius:112px;*/
+
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
   background-image: -webkit-radial-gradient(circle, #eee, #000000);
@@ -129,7 +130,7 @@ div.statusbar_row a.warning_message:hover {
 div.update_all input{ width:100%; }
 
 div.statusbar_row img.small-working-icon { vertical-align: middle; }
-div.statusbar_row img { display:inline-block; height:22px; width:22px; margin-right:0px; vertical-align:middle; }
+div.statusbar_row img { display:inline-block; height:19px; width:19px; margin:2px 1px 1px 2px; vertical-align:middle; }
 div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 
 .status_ok, .status_warning {
@@ -231,7 +232,6 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 label.quicksand_button_active, filter_all:active {
   -moz-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;
   -webkit-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;    
-
   color:#444;
   text-shadow: 0px 1px 0 #eee!important;
 }
@@ -262,9 +262,9 @@ label.quicksand_button_right {
 
 /* Control panel Image grid */
 .image-grid li {
-  width: 120px;
-  height: 140px;
-  margin: 10px 20px;
+  width: 142px;
+  height: 142px;
+  margin: 10px 10px;
   float: left;
 
   text-align: center;
@@ -286,9 +286,11 @@ label.quicksand_button_right {
 }
 
 .image-grid img {
-  width: 100px;
-  height: 100px;
-  margin:10px;
+/*  width: 100px;*/
+/*  height: 100px;*/
+  width:  90px;
+  height: 90px;
+  margin: 10px 10px;
 }
 
 .image-grid li img, .image-grid li strong {
@@ -297,8 +299,39 @@ label.quicksand_button_right {
 
 .image-grid li strong {
   color: #686f74;
+  font-size:12px;
   width:100%;
-  height:32px;
-  line-height:16px;
+  word-wrap: break-word;
+}
+
+div.overview li {
+  padding: 5px;     
+  border: 2px solid #ccc; 
+  background-color: #f5f5f5;
+  background: -moz-linear-gradient(center top, #FFF, #EEE) repeat scroll 0 0 transparent;
+  background: -moz-linear-gradient(center 270deg , #FFF, #E5E5E5) repeat scroll 0 0 transparent;
+
+     
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#F0F0F0));
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px; 
+
+}
+    
+div.overview li:hover {
+  background-color: #f5f5f5;
+  text-decoration: none;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px; 
+  border: 2px solid #5f5f5f;
+    padding: 5px;
 }
 
