--- a/webclient/public/stylesheets/webyast-software.css
+++ b/webclient/public/stylesheets/webyast-software.css
@@ -158,6 +158,9 @@
 #updates_panel button.active {
   color:#222;
   box-shadow: 0 0 3px #666 inset;
+  -moz-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;
+  -webkit-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;    
+/*  text-shadow: 0px 1px 0 #eee!important;*/
 }
 
 .patches { width:100%; }
