--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -371,7 +371,9 @@ ul li
 /* == Lists and Tables ====================================================
 
 div.overview
-  padding: 5px
+  padding: 0px 0px 20px 0px
+  border: 1px solid #CACACA
+  position:relative
   a.controlpanel-shortcut
     float: left
     margin: 5px
