--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -20,8 +20,11 @@
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.easing.1.3" %>
+  <%= javascript_include_tag "jquery-css-transform" %>
+  <%= javascript_include_tag "jquery-animate-css-rotate-scale" %>
   <%= javascript_include_tag "jquery.quicksand" %>
 <% end %>
+
 
 
 <% display_patches = ControlPanelConfig.read 'display_patch_status', true %>
@@ -119,12 +122,14 @@
   <!--CONFIGURATION-->
 <!--  <h3 style="vertical-align: middle;"><%= image_tag("/images/yast-config.png", :height=>"23", :width=>"23", :border=>"0", :style=>'vertical-align: middle;') %> <%= _("Configuration") %></h3> -->
   <div id="favorites" class="plugin-content">
-    <div class="overview" style="padding: 0px 0px 20px 0px; border: 1px solid #CACACA; position:relative;">
+    <div class="overview" style="">
        <div id="filter">
           <span id="filter_recent" id="visible_filters">
             <span value="Recently used" style="font-size:14px;"><%= _("Recently used modules") %></span>
           </span>
+
           <label id="filter_all" value="All" class="quicksand_button quicksand_button_right" value="All" style="float:right"><%= _("All") %></label>
+
           <span id="hidden_filters">     
             <% @shortcuts.values.reject {|d| d['disabled']}.index_by {|r| r['groups']}.values.each_with_index do | shortcut, i | %>
               <% array = Array['quicksand_button_left', 'quicksand_button_center', 'quicksand_button_right'] %>
