- optimize WebYaST CSS layout for the iPad

--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -272,6 +272,9 @@ span.icon-yast-users{ background-position: 0 -1470px; }
 
   -moz-border-radius:100%;
   -webkit-border-radius:100%;
+  border-radius:100%;
+  -webkit-border-radius:48px;
+
 
   -moz-box-shadow:inset 0px 0px 2px #000;
   -webkit-box-shadow:inset 0px 0px 2px #000;
