--- a/webclient/public/stylesheets/webyast-online-help.css
+++ b/webclient/public/stylesheets/webyast-online-help.css
@@ -30,6 +30,7 @@
   width:22px;
   text-align:center;
   -webkit-border-radius:100%;
+  -webkit-border-radius:22px;
   -moz-border-radius:100%;
 
   float:right;
