--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -39,27 +39,24 @@
   -moz-box-shadow: 0px 0px 1px #666, 0px 0px 10px #888;
   -webkit-box-shadow: 0px 0px 1px #666, 0px 0px 10px #888;
 
-  /* SQUARE   */
-  -moz-border-radius:10px;
-  /*ROUND*/
   -moz-border-radius:100%;
-  -webkit-border-radius:100px;
-  border-radius: 100%;
-
+  -webkit-border-radius:112px;
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
-  background-image: -webkit-radial-gradient(circle, #eee, #000000);
-
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(#eeeeee), to(#474747));
+  /*  background: -webkit-gradient(circle, #eee, #000000);*/
 }
 
 #status-eye.eye_healthy {
   background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
-  background-image: -webkit-radial-gradient(circle, #68b400, #000000);
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 50, from(#68b400), to(#474747));
+  /*  background-image: -webkit-radial-gradient(circle, #68b400, #000000);*/
 }
 
 #status-eye.eye_warning {
   background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%);
-  background-image: -webkit-radial-gradient(circle, red, #000000);
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(red), to(#474747));
+  /*  background-image: -webkit-radial-gradient(circle, red, #000000);*/
 }
 
 div.statusbar_header {
@@ -107,6 +104,7 @@ div.statusbar_header label {
   border:4px solid #eee;
   padding:5px;
   min-height:50px;
+  position:relative;
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
 }
@@ -114,7 +112,7 @@ div.statusbar_header label {
 div.statusbar_row { line-height:26px; vertical-align:middle; }
 div.statusbar_row input { margin:5px 0; }
 
-div.statusbar_row a.button { width:100%; display:inline-block; margin:3px 0; text-align:center; line-height:18px; }
+div.statusbar_row a.button { display:block; margin:3px auto; text-align:center; line-height:18px; }
 
 div.statusbar_row a.warning_message {
   font-weight: normal;
@@ -150,15 +148,18 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 }
 
 .status_warning {
-  background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
-  background-image: -webkit-radial-gradient(circle, #ea5656, #7b3232);
+  background: -webkit-gradient(radial, 50% 50%, 2, 50% 50%, 10, from(#ea5656), to(#7b3232));
+ /*  background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;*/
+ /*  background-image: -webkit-radial-gradient(circle, #ea5656, #7b3232);*/
+
 }
 
 .status_ok {
   background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;
-  background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;
-  background-image: -webkit-radial-gradient(circle, #59c766, #25712e);
+  background: -webkit-gradient(radial, 50% 50%, 2, 50% 50%, 10, from(#59c766), to(#25712e));
+  /*  background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;*/
+  /*  background-image: -webkit-radial-gradient(circle, #59c766, #25712e);*/
 }
 
 #favorites { border-color: #eee; }
