- webyast-base-ui-0.2.33

--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -184,7 +184,7 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 
   line-height:30px;
   height: 30px;
-  padding: 4px 6px;
+  padding: 4px 6px 5px 6px;
   color: #666; 
 }
 
