--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -16,6 +16,25 @@
  *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *#++ */
 
+
+div.blockMsg {
+/*  -webkit-border-radius:    4px; */
+/*  -moz-border-radius:       4px;*/
+/*  -moz-box-shadow: 0px 0px 10px #fff;*/
+/*  -webkit-box-shadow: 0px 0px 10px #fff;*/
+  margin:0;
+  padding:0;
+}
+
+/*div.blockOverlay {*/
+/*  background: url("../images/stripes-bg.png") repeat scroll 0 0 transparent;*/
+/*  -moz-box-shadow: inset 0px 0px 300px #111!important;*/
+/*  -webkit-box-shadow: inset 0px 0px 300px #111!important;*/
+/*  background-color:#eee!important;*/
+/*  opacity:0.5;*/
+/*  -moz-opacity:0.5;*/
+/*}*/
+
 #modalWindow {
   font-family: Helvetica,Arial,sans-serif;
   position:absolute;
@@ -30,12 +49,12 @@
 }
 
 #modalWindowShade {
-  -moz-box-shadow: inset 0px 0px 300px #111;
-  -webkit-box-shadow: inset 0px 0px 300px #111;
-  /*background: url("../images/stripes-bg.png") repeat scroll 0 0 transparent;*/
-	background-color:#eee;
-  opacity:0.5;
-  -moz-opacity:0.5;
+/*  -moz-box-shadow: inset 0px 0px 300px #111;*/
+/*  -webkit-box-shadow: inset 0px 0px 300px #111;*/
+  background: url("../images/stripes-bg.png") repeat-x #a0a0a0;
+/*  background: url('/images/gradientx40.png') repeat-x #3494f2;*/
+  opacity:0.6;/
+/*  -moz-opacity:0.5;*/
 
   border: medium none;
   cursor: wait;
