--- a/webclient/public/stylesheets/webyast-software.css
+++ b/webclient/public/stylesheets/webyast-software.css
@@ -105,7 +105,7 @@
 }
 
 #updates_panel button[type=submit] {
-  padding:4px 10px 4px 7px; /* Firefox */
+  padding:6px 10px 6px 7px; /* Firefox */
   line-height:18px; /* Safari */
 }
 
@@ -123,10 +123,10 @@
 
 #updates_panel button.left {
   border-right-width:1px;
-  border-radius: 3px 0px 0px 3px;
-  -khtml-border-radius: 3px 0px 0px 3px;
-  -moz-border-radius: 3px 0px 0px 3px;
-  -webkit-border-radius: 3px 0px 0px 3px;
+  border-radius: 2px 0px 0px 2px;
+  -khtml-border-radius: 2px 0px 0px 2px;
+  -moz-border-radius: 2px 0px 0px 2px;
+  -webkit-border-radius: 2px 0px 0px 2px;
   border-left:1px solid #a0a0a0;
 }
 
@@ -149,10 +149,10 @@
   border-left:0px;
   border-right:1px solid #a0a0a0;
 
-  border-radius: 0px 3px 3px 0px;
-  -khtml-border-radius: 0px 3px 3px 0px;
-  -moz-border-radius: 0px 3px 3px 0px;
-  -webkit-border-radius: 0px 3px 3px 0px;
+  border-radius: 0px 2px 2px 0px;
+  -khtml-border-radius: 0px 2px 2px 0px;
+  -moz-border-radius: 0px 2px 2px 0px;
+  -webkit-border-radius: 0px 2px 2px 0px;
 }
 
 #updates_panel button.active {
@@ -167,7 +167,7 @@
 .patches a {border:0px;}
 
 #patchesd { background-color:#fff; }
-#patchesd h3 { font-weight:22px; line-height:22px; vertical-align:middle; text-align:center; margin:10px; padding:2px; color:#444; }
+#patchesd h3 { font-size:20px; line-height:20px; vertical-align:middle; text-align:center; margin:10px; padding:2px; color:#aaaaaa; }
 
 th.first span {
   display:inline-block;
