--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -20,8 +20,8 @@
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.easing.1.3" %>
-  <%= javascript_include_tag "jquery-css-transform" %>
-  <%= javascript_include_tag "jquery-animate-css-rotate-scale" %>
+  <% javascript_include_tag "jquery-css-transform" %>
+  <% javascript_include_tag "jquery-animate-css-rotate-scale" %>
   <%= javascript_include_tag "jquery.quicksand" %>
 <% end %>
 
