--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -27,7 +27,7 @@
 
   <script type="text/javascript">
   var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
-  //startNotifier({'module':'network', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+  startNotifier({'module':'network', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
 
   $(document).ready(function() {
     validateIPv4("ip");
@@ -104,9 +104,7 @@
       },
       submitHandler: function(form) {
         var message = <%= jss _("Please wait") -%>;
-             // var message = <%= jss _("Please wait") -%>;
-      disableFormOnSubmit(message);
-//        $.modalDialog.wait( {message: message});
+        $.modalDialog.wait( {message: message});
         form.submit();
       },
       success: "valid"
