--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -142,30 +142,31 @@
       <div class="clearfix">&nbsp;</div>
 
       <div id="updates_panel">
-	      <button type="submit" id="comment" class="left active" value="all"
-	         onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
-	         :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	         <img src='/images/install.png'/><%=_("All updates") %>&nbsp;<span>(<%=counter%>)</span>
-	      </button>
-	      <button type="submit" class="middle" value="security"
-	          onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
-	          :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	          <img src='/icons/kupdateapplet_red.png'/><%=_("Security") %>&nbsp;<span>(<%=@hash["security"]%>)</span></button>
-	      <button type="submit" class="middle" value="important"
-	          onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
-	          :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	        <img src='/icons/kupdateapplet_yellow.png'/><%=_("Important") %>&nbsp;<span>(<%=@hash["important"]%>)</span>
-	      </button>
-	      <button type="submit" class="middle" value="green"
-	          onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
-	          :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	          <img src='/icons/kupdateapplet_green.png'/><%=_("Recommended") %>&nbsp;<span>(<%=@hash["green"]%>)</span>
-	      </button>
-	      <button type="submit" class="right" value="optional"
-	        onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
-	        :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	        <img src='/icons/kupdateapplet_optional.png'/><%=_("Optional") %>&nbsp;<span>(<%=@hash["optional"] + @hash["low"] %>)</span>
-	      </button>
+        <script type="text/javascript">var message = <%= jss _("Please wait") -%>;</script>
+        <button type="submit" id="comment" class="left active" value="all"
+           onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
+           :loading => "pleaseWaitForUpdates(message)", :complete => "$.unblockUI()") %>">
+           <img src='/images/install.png'/><%=_("All updates") %>&nbsp;<span>(<%=counter%>)</span>
+        </button>
+        <button type="submit" class="middle" value="security"
+            onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
+            :loading => "pleaseWaitForUpdates(message)", :complete => "$.unblockUI()") %>">
+            <img src='/icons/kupdateapplet_red.png'/><%=_("Security") %>&nbsp;<span>(<%=@hash["security"]%>)</span></button>
+        <button type="submit" class="middle" value="important"
+            onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
+            :loading => "pleaseWaitForUpdates(message)", :complete => "$.unblockUI()") %>">
+          <img src='/icons/kupdateapplet_yellow.png'/><%=_("Important") %>&nbsp;<span>(<%=@hash["important"]%>)</span>
+        </button>
+        <button type="submit" class="middle" value="green"
+            onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
+            :loading => "pleaseWaitForUpdates(message)", :complete => "$.unblockUI()") %>">
+            <img src='/icons/kupdateapplet_green.png'/><%=_("Recommended") %>&nbsp;<span>(<%=@hash["green"]%>)</span>
+        </button>
+        <button type="submit" class="right" value="optional"
+          onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
+            :loading => "pleaseWaitForUpdates(message)", :complete => "$.unblockUI()") %>">
+          <img src='/icons/kupdateapplet_optional.png'/><%=_("Optional") %>&nbsp;<span>(<%=@hash["optional"] + @hash["low"] %>)</span>
+        </button>
       </div>
     </form>
 
