--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -24,8 +24,10 @@
   <%= javascript_include_tag "validation.js" %>
   <script type="text/javascript">
     $(document).ready(function() {
-      var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
-      startNotifier({'module':'activedirectory', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+      <% if @poll_for_updates %>
+        var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+        startNotifier({'module':'activedirectory', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+      <% end %>
 
       $("#activedirectoryForm").validate();
       // make the error message translatable - override the default messsage
