--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -139,34 +139,35 @@
       </div>
 
       <% if @shortcuts.empty? %>
-	      <h4 id="warning_message_text">
-	        <%= image_tag("/images/dialog-warning.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
-	        <%= _("WebYaST modules are not installed on your system!") %>
-	      </h4>
-      <% elsif  !@shortcuts.empty? && @count == @shortcuts.count %>
-	      <h4 id="warning_message_text">
-	        <%= image_tag("/images/dialog-warning.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
-	        <%= _("You have no permissions to see or change the modules, please contact the administrator to set up permissions first!") %>
-	      </h4>
+        <h4 id="warning_message_text">
+          <%= image_tag("/images/dialog-warning.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+          <%= _("WebYaST modules are not installed on your system!") %>
+        </h4>
+       <% elsif  !@shortcuts.empty? && @count == @shortcuts.count %>
+        <h4 id="warning_message_text">
+          <%= image_tag("/images/dialog-warning.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+          <%= _("You have no permissions to see or change the modules, please contact the administrator to set up permissions first!") %>
+        </h4>
       <% else %>
 
         <div style="margin:0 auto; position:relative;">
           <ul id="webyast_plugins" class="image-grid">
-	          <% @shortcuts.values.reject{|v| v['disabled']}.sort_by {|v| v['title']}.each_with_index do |data, index| %>
-	            <% if data['main'] %>
-              <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="main">
+            <% @shortcuts.values.reject{|v| v['disabled']}.sort_by {|v| v['title']}.each_with_index do |data, index| %>
+              <% html_map = {:class => "plugin_link"} %>
+              <% html_map['original-title'] = data['description'] unless data["description"].blank? %>
+              <% if data['main'] %>
+                <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="main">
               <% else %>
-	          
-              <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="<%= data['groups'] %>">
+                <li id="module<%= index %>" data-id="id-<%= index%>" data-type="<%= data['groups'] %>" class="<%= data['groups'] %>">
               <% end %>
-                <a href="<%= data['url'] %>" class="plugin_link" original-title="<%= _(data['description']) %>">
+                <% link_to(data['url'], html_map) do %>
                   <%= image_tag(data['icon'] ) %>
                   <strong><%= _(data['title']) %></strong>
-                </a>
+               <% end %>
               </li>
-	          <% end %>
-	        </ul>
-	      </div>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
 
       <div style="clear:both;"></div>
