--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -200,7 +200,7 @@
     </div>
 
     <div id="footer" style="clear:both; overflow:hidden;">
-      <div class="copy">&copy; 2009,2010 Novell, Inc.</div>
+      <div class="copy">&copy; 2009-2011 Novell, Inc.</div>
     </div>
 
   </body>
