- It could not able to assign a role to a user (bnc#692223) - webyast-users-ui-0.2.13

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
 
 <% content_for :head do %>
  <% if JSMIN == true %>  
-    <%= javascript_include_tag "/min/users-min.js"-%>
+    <%= javascript_include_tag "min/users-min.js"-%>
     <%= javascript_include_tag "select_dialog.js" %>
   <% else %>
     <%= javascript_include_tag "select_dialog.js" %>
