--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -18,7 +18,7 @@
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
-
+      <input type="hidden" id="all_users_string" value="<%= @all_users_string %>" />
       <div class="fieldset-group tabs_<%= user.uid %>">
 
       <fieldset id="tab_login_<%=  (new ? "" : user.uid) %>">
