- corrected spelling mistakes in passwordStrength meter script - added quick sand script to be included if JSMIN is set to false - webyast-base-ui-0.2.40

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -44,7 +44,8 @@
           "yast.helpers",
           "digitalspaghetti.password",
           "browser_fixes",
-          "jquery.quicksearch"
+          "jquery.quicksearch",
+          "jquery.quicksand"
     %>
 
     <%= javascript_include_tag "jquerytimer", "jquerySessionTimeout", "jquery.blockUI", "jqueryDisableOnSubmit" %>
