--- a/webclient/public/stylesheets/webyast-roles.css
+++ b/webclient/public/stylesheets/webyast-roles.css
@@ -68,8 +68,8 @@
 #rolesUpdateForm .fieldset-group li.ui-tabs-selected span { color:#333; font-size:12px; text-shadow: 0px 0px 1px rgba(200, 200, 200, 0.3); }
 
 #rolesContainer, #usersContainer { font-size:13px; background-color: #fff; max-height:600px; }
-#rolesContainer { width:50%; overflow:auto; padding-right:2px; }
-#usersContainer { width:48%; }
+#rolesContainer { width:50%; overflow:auto; padding-right:2px; float:left; }
+#usersContainer { width:48%; float:right; }
 
 #rolesContent, #usersContent { min-height:400px; }
 #rolesHeader, #usersHeader { text-align:left; display:block; }
@@ -90,7 +90,7 @@ span.roleHeader label { font-weight:bold;  text-shadow: 0px 1px 0px rgba(255, 25
 #rolesContent label { display:inline-block; float:none; text-align: left; margin: 0 0 0 5px; vertical-align:middle; }
 
 #assignUsers span.roleHeader {
-  padding:2px 0px 4px 0px;
+  padding:4px 0px 4px 0px;
   background-color:#eee;
   border:1px solid #e0e0e0;
   display:block;
@@ -98,6 +98,7 @@ span.roleHeader label { font-weight:bold;  text-shadow: 0px 1px 0px rgba(255, 25
 
 #rolesContent span.roleBody {
   min-height:50px;
+  vertical-align:middle;
   display:block;
   padding:5px;
   border-width: 0px 1px 1px 1px;
@@ -141,31 +142,49 @@ span.drag-active {
 }
 
 span.drop-available { background-color: #FDFFF3; }
-span.roles_warning {
-  background-color:#fff;
-  background: -moz-linear-gradient(90deg, #fff, #f5f5f5) repeat scroll 0 0 transparent;
-  display:block;
-  padding:5px 5px 0px 5px;
-  border: 2px solid #666;
-  -moz-border-radius:5px;
-  -webkit-border-radius:3px;
-  -moz-box-shadow:0 0 5px #ccc;
-  -webkit-box-shadow:0 0 5px #888888;
-  color:#444;
-  font-size:11px;
+
+span.user-warning-message {
+  text-align:center;
+  font-weight:normal;
+  color:#CE1717;
   font-weight:bold;
+  font-size:11px;
   text-shadow: 0 1px 0px rgba(255, 255, 255, 1);
-  vertical-align:middle;
-  line-height:22px;
+  display:none;
 }
 
-span.roles_warning:before {
-  vertical-align:middle;
-  display:inline;
-  float:left;
-  margin-right:3px;
-  content:url(../images/warning.png);
-}
+/*span.user-warning-message img {*/
+/*  height:16px;*/
+/*  width:16px;*/
+/*  vertical-align: text-top;*/
+/*  display:inline-block;*/
+/*}*/
+
+/*span.roles_warning {*/
+/*  background-color:#fff;*/
+/*  background: -moz-linear-gradient(90deg, #fff, #f5f5f5) repeat scroll 0 0 transparent;*/
+/*  display:block;*/
+/*  padding:5px 5px 0px 5px;*/
+/*  border: 2px solid #666;*/
+/*  -moz-border-radius:5px;*/
+/*  -webkit-border-radius:3px;*/
+/*  -moz-box-shadow:0 0 5px #ccc;*/
+/*  -webkit-box-shadow:0 0 5px #888888;*/
+/*  color:#444;*/
+/*  font-size:11px;*/
+/*  font-weight:bold;*/
+/*  text-shadow: 0 1px 0px rgba(255, 255, 255, 1);*/
+/*  vertical-align:middle;*/
+/*  line-height:22px;*/
+/*}*/
+
+/*span.roles_warning:before {*/
+/*  vertical-align:middle;*/
+/*  display:inline;*/
+/*  float:left;*/
+/*  margin-right:3px;*/
+/*  content:url(../images/warning.png);*/
+/*}*/
 
 span.assigned:hover {
   -moz-border-radius:3px;
@@ -257,60 +276,77 @@ input#role_name { margin-left:5px; }
 input.computed { opacity: 0.5; }
 
 #infoMark {
-  font-size:40px;
-  padding:4px;
   color:#fff;
+  padding:4px;
   background-color:#666;
   font-family:'Arial';
   font-weight:bold;
   vertical-align:middle;
   display:inline-block;
-  height:42px;
-  width:42px;
   border:3px solid white;
-
   margin-right:10px;
   text-align:center;
   -webkit-border-radius:100%;
   -moz-border-radius:100%;
+  text-shadow: 0 -1px 0 #222;
+  opacity: 0.99;
+}
 
+#infoMark.info {
+  height:42px;
+  width:42px;
+  font-size:40px;
   background: -moz-linear-gradient(center top , #aaa 10%, #888 30%, #777 51%, #666 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.10, #aaa), color-stop(0.30, #888), color-stop(0.51, #777), color-stop(1.00, #666));
-  text-shadow: 0 -1px 0 #222;
-	opacity: 0.99;
+}
+
+#infoMark.warning {
+  height:22px;
+  width:22px;
+  font-size:20px;
+  margin-left:-10px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.10, #F30404), color-stop(0.30, #B12D2D), color-stop(0.51, #A93131), color-stop(1.00, #793333));
+  background: -moz-linear-gradient(center top , #F30404 10%, #B12D2D 30%, #A93131 51%, #793333 100%) repeat scroll 0 0 transparent;
 }
 
 #roles_tipsy_tooltip {
-	font-size: 12px;
-	font-weight:bold;
-	position: absolute;
+  font-size: 12px;
+  font-weight:bold;
+  position: absolute;
 
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.9);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.9);
 
- 	padding:5px 15px;
+  padding:5px 10px;
   top: 0;
   right:5px;
 
-	z-index: 1003;
-
-	background-color: #222;
-	color: white;
-	opacity: 0;
-	text-align: center;
-	border-radius: 3px;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
+  z-index: 1003;
+  vertical-align:middle;
+  background-color: #222;
+  color: white;
+  opacity: 0;
+  text-align: center;
+  border-radius: 3px;
+  -moz-border-radius:3px;
+  -webkit-border-radius:3px;
 }
 
-#roles_tipsy_tooltip div { min-height:55px; }
+#tooltip_message_container {
+  float:right; 
+  min-width:200px; 
+  width:300px;
+  vertical-align:middle;
+}
+
+/*#roles_tipsy_tooltip div { min-height:55px; }*/
 #roles_tipsy_tooltip label.info_text {
   text-align:left;
   font-size:12px;
   display:inline-block;
   padding:0px;
   width:100%;
-	vertical-align:middle;
+  vertical-align:middle;
 }
 
-#dont_show { float:right; color:#3399CC; }
+#dont_show { float:right; color:#3399CC; margin-right:5px; }
 
