--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -255,7 +255,7 @@ label.quicksand_button_right {
   float: left;
 
   text-align: center;
-  line-height: 20px;
+/*  line-height: 20px;*/
   color: #686f74;
 
   list-style: none;
@@ -289,6 +289,7 @@ label.quicksand_button_right {
   font-size:12px;
   width:100%;
   word-wrap: break-word;
+  text-shadow: 1px 1px 0 #f5f5f5;
 }
 
 div.overview li {
