- added new icon - renamed license test - webyast-root-user-ui-0.2.8

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -114,9 +114,9 @@
       <div class="right" >
   	    <span id="questionMark" class="right" style="margin:2px 5px;">?</span>
       </div>
-    	<div class="clearfix"></div>
+      <div class="clearfix"></div>
     </div>
-
+    <div class="clearfix">&nbsp;</div>
     <fieldset id="password" class="webyast_fieldset">
       <div class="fieldset_header">
 	      <span class="fieldset_header_title" ><%= _("Password Setup for User 'root'") -%></span>
