--- a/webclient/public/stylesheets/webyast-software.css
+++ b/webclient/public/stylesheets/webyast-software.css
@@ -83,9 +83,6 @@
   display:block;
   float:left;
   border:1px solid #999;
-/*  font-family: Tahoma, Trebuchet MS, Helvetica, sans-serif;*/
-/*  font-size:12px;*/
-
   text-decoration:none;
   font-weight:bold;
 
@@ -115,10 +112,10 @@
 #updates_panel button img, #updates_panel a img{
   margin:0px 5px 0px 0px !important;
   padding:0;
-  vertical-align:sub;
+  vertical-align:inherit;
   border:none;
-  width:20px;
-  height:20px;
+  width:18px;
+  height:18px;
 }
 
 #updates_panel button.left {
