- adapted background gradient (Chromium)

--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -131,53 +131,33 @@ div.button_container div.nav-buttons { margin:0px 0px; padding:10px 0; }
 }
 
 .plugin-icon-container {
-/*  display:inline-block;*/
   position:absolute;
   top:-15px;
   height:60px;
   margin-left:2px;
   width:60px;
-/*  font-size:20px;*/
-/*  line-height:48px;*/
-/*  color:#ddd;*/
   vertical-align:middle;
-/*  border:1px solid #f5f5f5;*/
-
   -moz-border-radius:100%;
   -webkit-border-radius:100%;
   border-radius:100%;
   -webkit-border-radius:48px;
 
-
-
   -moz-box-shadow:inset 0px 0px 2px #000;
   -webkit-box-shadow:inset 0px 0px 2px #000;
   text-align:center;
 
-  background: -moz-linear-gradient(top, #e0e0e0 0%, #ccc 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#e0e0e0), to(#ccc));
-  
   background: -moz-linear-gradient(top, #fafafa 0%, #e0e0e0 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#e0e0e0), to(#ccc));
-
-/*  text-shadow: 0px -1px 0px #000;*/
-/*  font-weight:bold;*/
-/*  vertical-align:middle;*/
+  background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#e0e0e0));
   border:1px solid #f5f5f5;
   
 }
 
 .plugin-icon-container img {
-/*  vertical-align:text-top;*/
   display:inline-block;
-    text-align:center;
-/*  height:40px;*/
-/*  width:40px;*/
-/*  margin:-6px 0 0 0;*/
+  text-align:center;
   float:none;
   height:48px;
   width:48px;
-/*  margin: -10px 0 0;*/
   margin:6px 0px;
 }
 
